top-bar created

--- a/index.html
+++ b/index.html
@@ -6,5 +6,40 @@
     <link rel="stylesheet" href="./css/index.css" />
     <title>WAVE-S</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <div class="container">
+        <!-- Top Bar -->
+        <div class="top-bar">
+          <div class="top-bar__region">
+            <img src="./images/icons/region.svg" alt="region" />
+            <span>Москва</span>
+            <button>
+              <img
+                src="./images/arrows/arrow-down.svg"
+                alt="a button arrow down"
+              />
+            </button>
+          </div>
+          <div class="top-bar__schedule">
+            <img src="./images/icons/schedule.svg" alt="schedule" />
+            <span>Ежедневно с 9:00 до 18:00</span>
+          </div>
+          <div class="top-bar__phone">
+            <img src="./images/icons/phone.svg" alt="phone" />
+            <a href="tel:+78007002060">+7 (800) 700-20-60</a>
+            <img
+              src="./images/other-images/circle-bullet.svg"
+              alt="circle bullet"
+            />
+            <a href="tel:+74957252563">+7 (495) 725-25-63</a>
+          </div>
+          <div class="top-bar__email">
+            <img src="./images/icons/email.svg" alt="email" />
+            <a href="mailto:info@moyka-wave.ru">Info@moyka-wave.ru</a>
+          </div>
+        </div>
+      </div>
+    </header>
+  </body>
 </html>
