--- a/index.html
+++ b/index.html
@@ -39,6 +39,19 @@
             <a href="mailto:info@moyka-wave.ru">Info@moyka-wave.ru</a>
           </div>
         </div>
+        <nav class="nav">
+          <img class="nav__logo" src="./images/logo/logo.svg" alt="logo" />
+          <div class="nav__menu">
+            <a class="nav__link" href="#">Оборудование</a>
+            <a class="nav__link" href="#">Объекты</a>
+            <a class="nav__link" href="#">О компании</a>
+            <a class="nav__link" href="#">Пресса о нас</a>
+            <a class="nav__link" href="#">Контакты</a>
+          </div>
+          <div class="nav__order-call">
+            <a href="#">Заказать звонок</a>
+          </div>
+        </nav>
       </div>
     </header>
   </body>
