just added comment for nav

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
             <a href="mailto:info@moyka-wave.ru">Info@moyka-wave.ru</a>
           </div>
         </div>
+        <!-- Nav -->
         <nav class="nav">
           <img class="nav__logo" src="./images/logo/logo.svg" alt="logo" />
           <div class="nav__menu">
