--- a/index.html
+++ b/index.html
@@ -53,6 +53,59 @@
             <a href="#">Заказать звонок</a>
           </div>
         </nav>
+        <!-- Hero -->
+        <div class="hero">
+          <div class="hero__content">
+            <h1 class="hero__title">Оборудование для моек самообслуживания</h1>
+            <div class="hero__features">
+              <div>
+                <img
+                  src="./images/other-images/hero-feature-img1.svg"
+                  alt="icon"
+                /><span>Быстрая окупаемость</span>
+              </div>
+              <div>
+                <img
+                  src="./images/other-images/hero-feature-img2.svg"
+                  alt="icon"
+                /><span>Высокое качество</span>
+              </div>
+              <div>
+                <img
+                  src="./images/other-images/hero-feature-img3.svg"
+                  alt="icon"
+                /><span>Короткие сроки</span>
+              </div>
+            </div>
+            <div class="hero__get-consultation">
+              <a href="#">Получить консультацию</a>
+              <img src="./images/arrows/arrow-right.svg" alt="arrow-right" />
+            </div>
+            <div class="hero__bottom">
+              <div class="hero__video">
+                <video src="./video/wave-s-eclipse.mp4" autoplay muted></video>
+                <div>
+                  <h4>Видео</h4>
+                  <p>Подробнее о наших мойках в видео формате</p>
+                </div>
+              </div>
+              <div class="hero__press">
+                <a href="#"></a>
+                <div>
+                  <img src="./images/other-images/press-img.svg" alt="icon" />
+                </div>
+                <h4>Новости / Пресса</h4>
+                <p>Подробнее о наших мойках в прессе</p>
+              </div>
+            </div>
+          </div>
+          <div class="hero__img">
+            <img
+              src="images/other-images/hero-img.png"
+              alt="the product image"
+            />
+          </div>
+        </div>
       </div>
     </header>
   </body>
