icons src changed. section advantages created

--- a/index.html
+++ b/index.html
@@ -60,19 +60,19 @@
             <div class="hero__features">
               <div>
                 <img
-                  src="./images/other-images/hero-feature-img1.svg"
+                  src="./images/icons/hero-feature-img1.svg"
                   alt="icon"
                 /><span>Быстрая окупаемость</span>
               </div>
               <div>
                 <img
-                  src="./images/other-images/hero-feature-img2.svg"
+                  src="./images/icons/hero-feature-img2.svg"
                   alt="icon"
                 /><span>Высокое качество</span>
               </div>
               <div>
                 <img
-                  src="./images/other-images/hero-feature-img3.svg"
+                  src="./images/icons/hero-feature-img3.svg"
                   alt="icon"
                 /><span>Короткие сроки</span>
               </div>
@@ -108,5 +108,103 @@
         </div>
       </div>
     </header>
+    <main>
+      <!-- Advantages -->
+      <section class="advantages">
+        <div class="container">
+          <h2 class="adventages__title">Наши преимущества</h2>
+          <div class="advantages__grid">
+            <div class="advantages__item">
+              <a href="#"></a>
+              <div class="advantages__icons">
+                <img src="./images/icons/feature-img1.svg" alt="icon" />
+              </div>
+              <p class="advantages__text">
+                Гарантия на все оборудование 12 месяцев
+              </p>
+            </div>
+            <div class="advantages__item">
+              <a href="#"></a>
+              <div class="advantages__icons">
+                <img src="./images/icons/feature-img2.svg" alt="icon" />
+              </div>
+              <p class="advantages__text">
+                Производим постгарантийное обслуживание
+              </p>
+            </div>
+            <div class="advantages__item">
+              <a href="#"></a>
+              <div class="advantages__icons">
+                <img src="./images/icons/feature-img3.svg" alt="icon" />
+              </div>
+              <p class="advantages__text">
+                10 летний опыт производства моек самообслуживания
+              </p>
+            </div>
+            <div class="advantages__item">
+              <a href="#"></a>
+              <div class="advantages__icons">
+                <img src="./images/icons/feature-img4.svg" alt="icon" />
+              </div>
+              <p class="advantages__text">Уникальные технологии</p>
+            </div>
+            <div
+              class="advantages__item advantages__item--size advantages__item__color"
+            >
+              <span>НАША КОМПАНИЯ РЕАЛИЗОВАЛА</span>
+              <span>более 300 объектов</span>
+              <span>по России и СНГ</span>
+            </div>
+            <div class="advantages__item advantages__item--size">
+              <p>
+                Мойка самообслуживания — выгодный бизнес, который быстро
+                окупается. Спрос на такие услуги только растет, а затраты на его
+                организацию минимальны. Вам даже не нужен персонал, достаточно
+                базового комплекта оборудования.
+              </p>
+              <p>
+                Наша компания предлагает современное оборудование для автомоек
+                самообслуживания, а также уборочную технику из Италии, Германии.
+                Мы много лет поставляем и реализуем на российском рынке
+                следующие марки:
+              </p>
+            </div>
+            <div class="advantages__item">
+              <h3>Tekomek</h3>
+              <p>аксессуары для моечного оборудования бесконтактных моек;</p>
+            </div>
+            <div class="advantages__item">
+              <h3>Idrobase</h3>
+              <p>
+                бренд, производящий аксессуары, шланги, фильтры и др. продукцию
+              </p>
+            </div>
+            <div class="advantages__item">
+              <h3>Eureka</h3>
+              <p>
+                итальянский производитель поломоечной и подметальной техники;
+              </p>
+            </div>
+            <div class="advantages__item">
+              <h3>Gibli</h3>
+              <p>итальянский бренд уборочной техники.</p>
+            </div>
+            <div class="advantages__item advantages__item--size">
+              <p>
+                Сделайте выбор в пользу безопасности, производительности и
+                эффективной работы на вашем предприятии. Используйте
+                конструктор, чтобы подобрать комплектацию: полное оснащение
+                предприятия под ключ или приобретение отдельных агрегатов. У нас
+                прямые поставки с заводов-производителей, что гарантирует низкий
+                ценник.
+              </p>
+            </div>
+            <div class="advantages__item advantages__item--size">
+              <img src="./images/other-images/car-img.jpg" alt="car" />
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
