sections partners created

--- a/index.html
+++ b/index.html
@@ -205,6 +205,34 @@
           </div>
         </div>
       </section>
+      <!-- Partners -->
+      <section class="partners">
+        <div class="container">
+          <h2 class="partners__title">Наши партнеры</h2>
+          <div class="partners__logos">
+            <img
+              src="./images/other-images/partners-logo-1.svg"
+              alt="partners logo"
+            />
+            <img
+              src="./images/other-images/partners-logo-2.svg"
+              alt="partners logo"
+            />
+            <img
+              src="./images/other-images/partners-logo-3.svg"
+              alt="partners logo"
+            />
+            <img
+              src="./images/other-images/partners-logo-4.svg"
+              alt="partners logo"
+            />
+            <img
+              src="./images/other-images/partners-logo-5.svg"
+              alt="partners logo"
+            />
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
