section popular products created

--- a/index.html
+++ b/index.html
@@ -233,6 +233,124 @@
           </div>
         </div>
       </section>
+      <!-- Popular Products -->
+      <section class="popular-products">
+        <div class="container">
+          <!-- Popular Products Top -->
+          <div class="popular-products__top">
+            <h2 class="popular-products__title">Популярные товары</h2>
+            <a href="#" class="popular-products__more">Посмотреть все товары</a>
+            <div class="popular-products__buttons">
+              <button class="popular-products__button-left">
+                <img src="./images/arrows/arrow-left-2.svg" alt="arrow left" />
+              </button>
+              <button class="popular-products__button-right">
+                <img
+                  src="./images/arrows/arrow-right-2.svg"
+                  alt="arrow right"
+                />
+              </button>
+            </div>
+          </div>
+          <!-- Popular Products Card List -->
+          <div class="card-list">
+            <!-- Card 1 -->
+            <div class="card">
+              <div class="card__img">
+                <img
+                  src="./images/other-images/popular-products-img-1.jpg"
+                  alt="Зона доп. услуг для МСО и АЗС"
+                />
+              </div>
+              <h4 class="card__title">Зона доп. услуг для МСО и АЗС</h4>
+              <div class="card__type">
+                <p><span>Тип:</span>Готовое решение МСО</p>
+              </div>
+              <div class="card__info">
+                <p><span>Напряжение:</span> 220 В</p>
+                <p><span>Мощность:</span> 2 х 2400 Вт.</p>
+                <p><span>Принимает:</span> Монеты/жетоны</p>
+                <p><span>Объем бака:</span> 2 х 70 л.</p>
+              </div>
+              <div class="card__payment">
+                <h5>Платежные системы</h5>
+                <p><span>Монетоприемник:</span> Eu 9</p>
+                <p><span>Купюроприемник:</span> (Опция)</p>
+                <p><span>Карты лояльности:</span> (Опция)</p>
+                <p><span>Фискальный чек:</span> (Опция)</p>
+              </div>
+              <div class="card__bottom">
+                <a href="#">Запросить цену</a>
+              </div>
+            </div>
+            <!-- Card 2 -->
+            <div class="card">
+              <div class="card__img">
+                <img
+                  src="./images/other-images/popular-products-img-2.jpg"
+                  alt="Терминал Platinum Space Robo (настенный)"
+                />
+              </div>
+              <h4 class="card__title">
+                Терминал "Platinum Space Robo" (настенный)
+              </h4>
+              <div class="card__type">
+                <p><span>Тип:</span>Терминал</p>
+              </div>
+              <div class="card__info">
+                <p><span>Корпус:</span> Нерж. сталь</p>
+                <p><span>Монтируется:</span> На стену</p>
+                <p><span>Экран:</span> Touch 43 дюйма (яркий)</p>
+                <p><span>Кнопки:</span> Сенсорные</p>
+                <p><span>Масса (кг):</span> 90</p>
+                <p><span>Подсветка:</span> "Ambilight" В комплекте</p>
+              </div>
+              <div class="card__payment">
+                <h5>Платежные системы</h5>
+                <p><span>Купюроприемник:</span> CashCode</p>
+                <p><span>Карты лояльности:</span> (в комплекте)</p>
+                <p><span>Банковские карты:</span> (в комплекте)</p>
+              </div>
+              <div class="card__bottom">
+                <strong>660 000 ₽</strong>
+                <a href="#">Заказать</a>
+              </div>
+            </div>
+            <!-- Card 3 -->
+            <div class="card">
+              <div class="card__img">
+                <img
+                  src="./images/other-images/popular-products-img-3.jpg"
+                  alt="Терминал Platinum Space"
+                />
+              </div>
+              <h4 class="card__title">Терминал "Platinum Space"</h4>
+              <div class="card__type">
+                <p><span>Тип:</span>Терминал</p>
+              </div>
+              <div class="card__info">
+                <p><span>Корпус:</span> Нерж. сталь</p>
+                <p><span>Монтируется:</span> На стену</p>
+                <p><span>Экран:</span> Touch 43 дюйма (яркий)</p>
+                <p><span>Кнопки:</span> Сенсорные</p>
+                <p><span>Масса (кг):</span> 90</p>
+                <p><span>Подсветка:</span> "Ambilight" В комплекте</p>
+              </div>
+              <div class="card__payment">
+                <h5>Платежные системы</h5>
+                <p><span>Купюроприемник:</span> CashCode</p>
+                <p><span>Монетоприемник:</span> Microcoin SP</p>
+                <p><span>Карты лояльности:</span> (в комплекте)</p>
+                <p><span>Банковские карты:</span> (в комплекте)</p>
+              </div>
+              <div class="card__bottom">
+                <strong>587 000 ₽</strong>
+                <a href="#">Заказать</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
