--- a/index.html
+++ b/index.html
@@ -351,6 +351,123 @@
           </div>
         </div>
       </section>
+      <!-- News -->
+      <section class="news">
+        <div class="container">
+          <!-- News Top -->
+          <div class="news__top">
+            <h2 class="news__title">Новости нашей компании</h2>
+            <a href="#" class="news__more">Посмотреть все новости</a>
+            <div class="news__buttons">
+              <button class="news__button-left">
+                <img src="./images/arrows/arrow-left-2.svg" alt="arrow left" />
+              </button>
+              <button class="news__button-right">
+                <img
+                  src="./images/arrows/arrow-right-2.svg"
+                  alt="arrow right"
+                />
+              </button>
+            </div>
+          </div>
+          <!-- News Card List -->
+          <div class="news__card-list">
+            <!-- Card 1 -->
+            <div class="news__card">
+              <div class="news__card-img-wrap">
+                <img
+                  class="news__card-img"
+                  src="./images/other-images/news-img.jpg"
+                  alt="Зона доп. услуг для МСО и АЗС"
+                />
+              </div>
+              <div class="news__card-content">
+                <h4 class="news__card-title">
+                  Зона дополнительных услуг на МСО
+                </h4>
+                <p class="news__card-desc">
+                  Оборудование для предоставления доп. услуг на автомойках и АЗС
+                </p>
+              </div>
+              <div class="news__bottom">
+                <div class="news__read-more">
+                  <a href="#"></a>
+                  <span>Читать далее</span>
+                  <div class="">
+                    <img src="./images/arrows/arrow-corner.svg" alt="arrow" />
+                  </div>
+                </div>
+                <div class="news__date">
+                  <img src="./images/icons/clock.svg" alt="clock icon" />
+                  <span>04.05.2022</span>
+                </div>
+              </div>
+            </div>
+            <!-- Card 2 -->
+            <div class="news__card">
+              <div class="news__card-img-wrap">
+                <img
+                  class="news__card-img"
+                  src="./images/other-images/news-img.jpg"
+                  alt="Зона доп. услуг для МСО и АЗС"
+                />
+              </div>
+              <div class="news__card-content">
+                <h4 class="news__card-title">
+                  Зона дополнительных услуг на МСО
+                </h4>
+                <p class="news__card-desc">
+                  Оборудование для предоставления доп. услуг на автомойках и АЗС
+                </p>
+              </div>
+              <div class="news__bottom">
+                <div class="news__read-more">
+                  <a href="#"></a>
+                  <span>Читать далее</span>
+                  <div class="">
+                    <img src="./images/arrows/arrow-corner.svg" alt="arrow" />
+                  </div>
+                </div>
+                <div class="news__date">
+                  <img src="./images/icons/clock.svg" alt="clock icon" />
+                  <span>04.05.2022</span>
+                </div>
+              </div>
+            </div>
+            <!-- Card 3 -->
+            <div class="news__card">
+              <div class="news__card-img-wrap">
+                <img
+                  class="news__card-img"
+                  src="./images/other-images/news-img.jpg"
+                  alt="Зона доп. услуг для МСО и АЗС"
+                />
+              </div>
+              <div class="news__card-content">
+                <h4 class="news__card-title">
+                  Зона дополнительных услуг на МСО
+                </h4>
+                <p class="news__card-desc">
+                  Оборудование для предоставления доп. услуг на автомойках и АЗС
+                </p>
+              </div>
+              <div class="news__bottom">
+                <div class="news__read-more">
+                  <a href="#"></a>
+                  <span>Читать далее</span>
+                  <div class="">
+                    <img src="./images/arrows/arrow-corner.svg" alt="arrow" />
+                  </div>
+                </div>
+                <div class="news__date">
+                  <img src="./images/icons/clock.svg" alt="clock icon" />
+                  <span>04.05.2022</span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
